Add index html file

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<p>aklds;
-
-</p>
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul>một</ul>
-    <ul>hai</ul>
-    <ul>ba</ul>
-    <ul>bốn</ul>
+    
+    <div class="box1"> 
+        <div class="box2">
+            <img src="logo Fagi2-05.png " alt=" ">
+        </div>
+
+    </div>
+
 </body>
 </html>
